--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JoanneumProjekt">
         <activity
+            android:name=".Admin.ADMIN_INTERFACE"
+            android:exported="false" />
+        <activity
             android:name=".Assistent.ProfessorLogin"
             android:exported="false" />
         <activity
@@ -19,14 +22,12 @@
         <activity
             android:name=".Admin.AdministratorLogin"
             android:exported="false" />
-
         <activity
             android:name=".ui.Student.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".ui.Student.INTERFACE_STUDENT"
             android:exported="false" />
-
         <activity
             android:name=".SignUP.SignUp"
             android:exported="true">
