--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JoanneumProjekt">
         <activity
+            android:name=".Assistent.Read_assigned_Student"
+            android:exported="false" />
+        <activity
             android:name=".Assistent.INTERFACE_Assistent"
             android:exported="false" />
         <activity
