--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.joanneumprojekt">
 
     <application
-        android:name=".SignUP.App"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JoanneumProjekt">
         <activity
-            android:name=".Admin.AddBill"
+            android:name=".Interface"
             android:exported="false" />
         <activity
             android:name=".Admin.Start"
@@ -39,6 +39,9 @@
             android:exported="false" />
         <activity
             android:name=".Admin.ADMIN_INTERFACE"
+            android:exported="false" />
+        <activity
+            android:name=".Assistent.ProfessorLogin"
             android:exported="false" />
         <activity
             android:name=".SignUP.Login_Interface"
