--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JoanneumProjekt">
         <activity
+            android:name=".Admin.Interface2"
+            android:exported="false" />
+        <activity
             android:name=".Admin.Admin_Delete_USER$Abrechnung"
             android:exported="false">
             <meta-data
@@ -38,7 +41,6 @@
         <activity
             android:name=".Admin.Interface_Work_ADD"
             android:exported="false" />
-
         <activity
             android:name=".Admin.ADMIN_INTERFACE"
             android:exported="false" />
