--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name=".rob_toolbar"
             android:exported="false" />
         <activity
-            android:name=".rob_addbill"
+            android:name=".Admin.New_Bill"
             android:exported="false" />
         <activity
             android:name=".rob_nav_drawer"
