--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,7 @@
             android:name=".open.Change_DATA_WORK"
             android:exported="false" />
         <activity
-            android:name=".open.Change_DATA_1_User"
+            android:name=".open.Change_Bill"
             android:exported="false" />
         <activity
             android:name=".SignUP.Login_Interface"
