--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.joanneumprojekt" >
+    package="com.example.joanneumprojekt">
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -14,13 +14,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.JoanneumProjekt" >
+        android:theme="@style/Theme.JoanneumProjekt">
+        <activity
+            android:name=".After_Login.show_change_bill"
+            android:exported="false" />
         <activity
             android:name=".After_Login.show_delete_bill"
             android:exported="false" />
         <activity
             android:name=".abrechnung"
-            android:exported="false" >
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -30,21 +33,21 @@
             android:exported="false" />
         <activity
             android:name=".Display_Interface.show_add_bill"
-            android:exported="false" >
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".Display_Interface.activity_showdata"
-            android:exported="false" >
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".After_Login.activity_camera"
-            android:exported="false" >
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -63,7 +66,7 @@
             android:exported="false" />
         <activity
             android:name=".Delete_Bill.activity_admin_delete_user"
-            android:exported="false" >
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -82,7 +85,7 @@
             android:exported="false" />
         <activity
             android:name=".SignUP.SignUp"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
